--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,9 +15,7 @@
         <ol>
             <li><a href="AuthorController?action=list">View all Authors</a></li>
             <li><a href="BookController?action=list">View all Books</a></li>
-            <li>Add New Author</li>
-            <li>Update an Author</li>
-            <li>Delete an Author</li>
+           <li><a href="listAuthorsAjax.jsp">View all Authors (Ajax)</a></li>
         </ol>
     </body>
 </html>
